[gd_scene load_steps=9 format=3 uid="uid://din5nv8a0h6k"]

[ext_resource type="Script" uid="uid://e13rt8qt2lmf" path="res://scripts/nodes/ui/main_menu.gd" id="1_1g8jr"]
[ext_resource type="Texture2D" uid="uid://bog65lx6ouk12" path="res://assets/imgs/godot_background_main_menu.png" id="2_m1kxf"]
[ext_resource type="FontFile" uid="uid://msqy0hwvsuth" path="res://assets/fonts/PixelOperator8.ttf" id="3_x2yvf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wu84c"]
texture = ExtResource("2_m1kxf")
modulate_color = Color(0.566967, 0.566967, 0.566967, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0.368156, 0.367909, 0.373291, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(0.30862, 0.692941, 0.420069, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(0.389589, 0.623892, 0.826827, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa1go"]
bg_color = Color(0.91638, 0.423566, 0.432539, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1g8jr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wu84c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -153.5
offset_right = 179.0
offset_bottom = 153.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_x2yvf")
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "Start"

[node name="HowToPlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_x2yvf")
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/normal = SubResource("StyleBoxFlat_rtw2f")
text = "How to Play
"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_x2yvf")
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/normal = SubResource("StyleBoxFlat_oa1go")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.26
anchor_right = 0.5
anchor_bottom = 0.26
offset_left = -295.0
offset_top = -23.0
offset_right = 293.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_x2yvf")
theme_override_font_sizes/font_size = 48
text = "Nomadic Soldier"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
